data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_496.wast
;; 7. **Incorrect Operand Restoration Leading to Infinite Loop**: Create a loop where `br` attempts to restore incorrect operands to the stack, leading to improper loop behavior. This tests whether the implementation properly unwinds and restores the operand stack to prevent infinite looping.

(assert_invalid 
  (module 
    (func $infinite-loop-with-br 
      (loop 
        (block 
          (br 1 (i32.const 1)) 
        ) 
      )
    )
    (func (block (br 0 (i32.const 1)) (unreachable)))
  ) 
  "type mismatch"
)